CHATS_SIT/force-app/main/default/objects/sfrosit_t_sbsd_indiv_emplmt_hist__x/sfrosit_t_sbsd_indiv_emplmt_hist__x.object-meta.xml
<CustomObject>
    <description>sfrosit$t_sbsd_indiv_emplmt_hist</description>
    <externalDataSource>Heroku_Connect_datasource</externalDataSource>
    <externalName>sfrosit$t_sbsd_indiv_emplmt_hist</externalName>
    <label>Individual Employment History</label>
    <pluralLabel>Individual Employment History</pluralLabel>
</CustomObject>