CHATS_SIT/force-app/main/default/objects/sfrosit_t_sbsd_indiv_emplmt_hist__x/fields/adr_line_2__c.field-meta.xml
<CustomField>
    <fullName>adr_line_2__c</fullName>
    <description>adr_line_2</description>
    <externalDeveloperName>adr_line_2</externalDeveloperName>
    <label>Address line 2</label>
    <length>35</length>
    <type>Text</type>
</CustomField>