CHATS_SIT/force-app/main/default/objects/sfrosit_t_sbsd_indiv_emplmt_hist__x/fields/adr_line_3__c.field-meta.xml
<CustomField>
    <fullName>adr_line_3__c</fullName>
    <description>adr_line_3</description>
    <externalDeveloperName>adr_line_3</externalDeveloperName>
    <label>Address line 3</label>
    <length>26</length>
    <type>Text</type>
</CustomField>