CHATS_SIT/force-app/main/default/objects/sfrosit_t_sbsd_indiv_emplmt_hist__x/fields/adr_zip_extn__c.field-meta.xml
<CustomField>
    <fullName>adr_zip_extn__c</fullName>
    <description>adr_zip_extn</description>
    <externalDeveloperName>adr_zip_extn</externalDeveloperName>
    <label>Zip Ext.</label>
    <length>4</length>
    <type>Text</type>
</CustomField>