CHATS_SIT/force-app/main/default/objects/sfrosit_t_sbsd_indiv_emplmt_hist__x/fields/cde_ownrshp__c.field-meta.xml
<CustomField>
    <fullName>cde_ownrshp__c</fullName>
    <description>cde_ownrshp</description>
    <externalDeveloperName>cde_ownrshp</externalDeveloperName>
    <label>Ownership Code</label>
    <length>3</length>
    <type>Text</type>
</CustomField>