CHATS_SIT/force-app/main/default/objects/sfrosit_t_sbsd_indiv_emplmt_hist__x/fields/cde_reason_termtn__c.field-meta.xml
<CustomField>
    <fullName>cde_reason_termtn__c</fullName>
    <description>cde_reason_termtn</description>
    <externalDeveloperName>cde_reason_termtn</externalDeveloperName>
    <label>Termination reason code</label>
    <length>3</length>
    <type>Text</type>
</CustomField>