CHATS_SIT/force-app/main/default/objects/sfrosit_t_sbsd_indiv_emplmt_hist__x/fields/cde_type_vrfyd_se__c.field-meta.xml
<CustomField>
    <fullName>cde_type_vrfyd_se__c</fullName>
    <description>cde_type_vrfyd_se</description>
    <externalDeveloperName>cde_type_vrfyd_se</externalDeveloperName>
    <label>Code verification type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>