CHATS_SIT/force-app/main/default/objects/sfrosit_t_sbsd_indiv_emplmt_hist__x/fields/cde_wage_min__c.field-meta.xml
<CustomField>
    <fullName>cde_wage_min__c</fullName>
    <description>cde_wage_min</description>
    <externalDeveloperName>cde_wage_min</externalDeveloperName>
    <label>Minimum wage code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>