CHATS_SIT/force-app/main/default/objects/sfrosit_t_sbsd_indiv_emplmt_hist__x/fields/dte_end_hire_temp__c.field-meta.xml
<CustomField>
    <fullName>dte_end_hire_temp__c</fullName>
    <description>dte_end_hire_temp</description>
    <externalDeveloperName>dte_end_hire_temp</externalDeveloperName>
    <label>Temporary/Seasonal Estimated End Date</label>
    <type>Date</type>
</CustomField>