CHATS_SIT/force-app/main/default/objects/sfrosit_t_sbsd_indiv_emplmt_hist__x/fields/dte_pay_first__c.field-meta.xml
<CustomField>
    <fullName>dte_pay_first__c</fullName>
    <description>dte_pay_first</description>
    <externalDeveloperName>dte_pay_first</externalDeveloperName>
    <label>First Pay Date</label>
    <type>Date</type>
</CustomField>