CHATS_SIT/force-app/main/default/objects/sfrosit_t_sbsd_indiv_emplmt_hist__x/fields/idn_emplmt_indiv__c.field-meta.xml
<CustomField>
    <fullName>idn_emplmt_indiv__c</fullName>
    <description>idn_emplmt_indiv</description>
    <externalDeveloperName>idn_emplmt_indiv</externalDeveloperName>
    <label>Identifier Individual Employment</label>
    <length>50</length>
    <referenceTargetField>T_SBSD_INDIV_EMPLMT__c.IDN_EXTNL__c</referenceTargetField>
    <referenceTo>T_SBSD_INDIV_EMPLMT__c</referenceTo>
    <relationshipLabel>Employment Legacy History</relationshipLabel>
    <relationshipName>sfrosit_t_sbsd_indiv_emplmt_hist</relationshipName>
    <type>IndirectLookup</type>
</CustomField>