CHATS_SIT/force-app/main/default/objects/sfrosit_t_sbsd_indiv_emplmt_hist__x/fields/ind_stubs_pay_rcvs__c.field-meta.xml
<CustomField>
    <fullName>ind_stubs_pay_rcvs__c</fullName>
    <description>ind_stubs_pay_rcvs</description>
    <externalDeveloperName>ind_stubs_pay_rcvs</externalDeveloperName>
    <label>Receives pay stubs?</label>
    <length>1</length>
    <type>Text</type>
</CustomField>