CHATS_SIT/force-app/main/default/objects/sfrosit_t_sbsd_indiv_emplmt_hist__x/fields/nam_busns__c.field-meta.xml
<CustomField>
    <fullName>nam_busns__c</fullName>
    <description>nam_busns</description>
    <externalDeveloperName>nam_busns</externalDeveloperName>
    <label>business name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>