CHATS_SIT/force-app/main/default/objects/sfrosit_t_sbsd_indiv_emplmt_hist__x/fields/nam_dba__c.field-meta.xml
<CustomField>
    <fullName>nam_dba__c</fullName>
    <description>nam_dba</description>
    <externalDeveloperName>nam_dba</externalDeveloperName>
    <label>DBA name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>