CHATS_SIT/force-app/main/default/objects/sfrosit_t_sbsd_indiv_emplmt_hist__x/fields/nbr_phone__c.field-meta.xml
<CustomField>
    <fullName>nbr_phone__c</fullName>
    <description>nbr_phone</description>
    <externalDeveloperName>nbr_phone</externalDeveloperName>
    <label>Phone number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>