CHATS_SIT/force-app/main/default/objects/sfrosit_t_sbsd_indiv_emplmt_hist__x/fields/nbr_phone_extn__c.field-meta.xml
<CustomField>
    <fullName>nbr_phone_extn__c</fullName>
    <description>nbr_phone_extn</description>
    <externalDeveloperName>nbr_phone_extn</externalDeveloperName>
    <label>Extension phone</label>
    <length>6</length>
    <type>Text</type>
</CustomField>