CHATS_SIT/force-app/main/default/objects/sfrosit_t_sbsd_indiv_emplmt_hist__x/fields/nbr_seq_emplmt_indiv__c.field-meta.xml
<CustomField>
    <fullName>nbr_seq_emplmt_indiv__c</fullName>
    <description>nbr_seq_emplmt_indiv</description>
    <externalDeveloperName>nbr_seq_emplmt_indiv</externalDeveloperName>
    <label>Number sequence indiv employment</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>